# backend/src/domain/topics/service.rs
@@ -2,7 +2,10 @@ use crate::domain::account::model::UserRole;
 use crate::domain::courses::service::CourseService;
 use crate::domain::exam::model::Exam;
 use crate::{
-    domain::topics::{model::TopicModel, repository::TopicRepository},
+    domain::topics::{
+        model::{TopicContentRow, TopicModel},
+        repository::TopicRepository,
+    },
     dto::topics::UpsertTopicRequestDTO,
     errors::Result,
     repo,
@@ -67,5 +70,62 @@ impl TopicService {
     pub async fn get_exams(&self, user: Uuid, role: UserRole, topic_id: i32) -> Result<Vec<Exam>> {
         let _ = self.get_topic_by_id(user, role, topic_id).await?; // need it all to check for access
         self.repo.get_exams(topic_id).await
+    }
+
+    pub async fn get_topic_content(
+        &self,
+        user: Uuid,
+        role: UserRole,
+        topic_id: i32,
+    ) -> Result<Vec<TopicContentRow>> {
+        let _ = self.get_topic_by_id(user, role, topic_id).await?;
+        self.repo.get_topic_content(topic_id).await
+    }
+
+    pub async fn reorder_topic_content(
+        &self,
+        user: Uuid,
+        role: UserRole,
+        topic_id: i32,
+        items: &[(String, String)],
+    ) -> Result<()> {
+        let _ = self.get_topic_by_id(user, role, topic_id).await?;
+        self.repo.reorder_topic_content(topic_id, items).await
+    }
+
+    pub async fn create_topic_text(
+        &self,
+        user: Uuid,
+        role: UserRole,
+        topic_id: i32,
+        content: String,
+    ) -> Result<i32> {
+        let _ = self.get_topic_by_id(user, role, topic_id).await?;
+        self.repo.create_topic_text(topic_id, content).await
+    }
+
+    pub async fn update_topic_text(
+        &self,
+        user: Uuid,
+        role: UserRole,
+        topic_id: i32,
+        text_id: i32,
+        content: String,
+    ) -> Result<()> {
+        let _ = self.get_topic_by_id(user, role, topic_id).await?;
+        self.repo
+            .update_topic_text(topic_id, text_id, content)
+            .await
+    }
+
+    pub async fn delete_topic_text(
+        &self,
+        user: Uuid,
+        role: UserRole,
+        topic_id: i32,
+        text_id: i32,
+    ) -> Result<()> {
+        let _ = self.get_topic_by_id(user, role, topic_id).await?;
+        self.repo.delete_topic_text(topic_id, text_id).await
     }
 }
